﻿[B]Version 2.6.6[/B]
[+] Добавлена поддержка прокси для windows
[+] Теперь можно указать адрес SOCKS-прокси, при использоании прокси Tor

[B]Version 2.6.5[/B]
[+] Восстановлена работа RiperAM в списках медиа.
[+] Разделена настройка прокси: для поиска и для списков медиа

[B]Version 2.6.4[/B]
[+] Проблемы с сетью: добавлена поддержка Tor для поиска торрентов и заказчки torrent-файлов

[B]Version 2.6.3[/B]
[+] Списки медиа: возобновлена работа получения метаданных

[B]Version 2.6.2[/B]
[+] История Просмотров: Перемотка при внешнем вызове

[B]Version 2.6.1[/B]
[+] Окно Поиска: Использование окна в сторонних плагинах

[B]Version 2.6.0[/B]
[+] Окно Поиска: Полноценный релиз
[+] Настройки: Добавлена возможность отключения уведомлений
[+] История Просмотров: При аварийном выходе данные остаются

[B]Version 2.5.6[/B]
[+] Списки Медиа: Добавлен RuTorOrg

[B]Version 2.5.5[/B]
[+] Control Center: Исправлена работа выбора трекеров для определенного запроса
[+] Торрент-клиент: При скачивании одного файла торрент-клиентом теперь автоматически выбирается раздача
[+] .torrent Player: Исправлена работа (спасибо kolosovski)
[+] Окно Поиска: Добавлено Окно Поиска в режиме тестирования

[B]Version 2.5.4[/B]
[+] Исправлено "открыть без возврата". Спасибо viorel-m.

[B]Version 2.5.3[/B]
[+] Венгерский язык
[+] Совместимость с Коди 17

[B]Version 2.5.2[/B]
[+] Упорядочивание по размеру файла

[B]Version 2.5.1[/B]
[+] Исправлена работа с кодировками

[B]Version 2.5.0[/B]
[+] НОВЫЙ проигрыватель pyrrent2http от inpos!  Аналог torrent2http написаный на python, а не на GO
[+] Проигрыватель: Ускорена повторная работа с торрентом - resume data (спасибо srg70 и RussakHH)

[B]Version 2.4.6[/B]
[+] Проигрыватель: Уменьшена просадка после загрузки буфера (спасибо srg70 и RussakHH)
[+] История Просмотров: Добавлено имя раздачи, тонкая настройка добавления по проценту просмотра
[+] API: Внешние управление из любого плагина

[B]Version 2.4.5[/B]