@@ -25,7 +25,8 @@ if proxy == 1:
     socks_ip = sys.modules["__main__"].__settings__.getSetting("socks_ip")
     import socket
     from resources import socks
-    socks.setdefaultproxy(socks.PROXY_TYPE_SOCKS5, socks_ip, 9050)
+    socks.setdefaultproxy(socks.PROXY_TYPE_SOCKS5, socks_ip,
+                          int(sys.modules["__main__"].__settings__.getSetting("socks_port")))
     socket.socket = socks.socksocket
 import urllib
 import urllib2
