@@ -31,7 +31,8 @@ proxy = int(sys.modules["__main__"].__settings__.getSetting("proxy"))
 if proxy == 2:
     socks_ip = sys.modules["__main__"].__settings__.getSetting("socks_ip")
     from resources import socks
-    socks.setdefaultproxy(socks.PROXY_TYPE_SOCKS5, socks_ip, 9050)
+    socks.setdefaultproxy(socks.PROXY_TYPE_SOCKS5, socks_ip,
+                          int(sys.modules["__main__"].__settings__.getSetting("socks_port")))
     socket.socket = socks.socksocket
 import urllib
 import urllib2
