@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.torrenter" name="Torrenter" version="2.6.6" provider-name="inpos">
+<addon id="plugin.video.torrenter" name="Torrenter" version="2.6.7" provider-name="inpos">
     <requires>
         <import addon="xbmc.python" version="2.1.0"/>
         <import addon="script.module.libtorrent"/>
