@@ -1,4 +1,7 @@
-﻿[B]Version 2.6.6[/B]
+﻿[B]Version 2.6.7[/B]
+[+] Теперь можно указать порт SOCKS-прокси, при использоании прокси Tor
+
+[B]Version 2.6.6[/B]
 [+] Добавлена поддержка прокси для windows
 [+] Теперь можно указать адрес SOCKS-прокси, при использоании прокси Tor
 
